RESOLVED FIXED146888
[EFL] Editing tests have been broken since r186694
https://bugs.webkit.org/show_bug.cgi?id=146888
Summary [EFL] Editing tests have been broken since r186694
Gyuyoung Kim
Reported 2015-07-11 23:40:05 PDT
SSIA. editing/selection/5354455-1.html [ Failure ] editing/selection/5354455-2.html [ Failure ] editing/spelling/context-menu-suggestions-multiword-selection.html [ Failure ] editing/spelling/context-menu-suggestions-subword-selection.html [ Failure ] editing/spelling/context-menu-suggestions.html [ Failure ]
Attachments
Patch (3.61 KB, patch)
2015-08-04 06:01 PDT, Hunseop Jeong
no flags
Patch (3.62 KB, patch)
2015-08-04 06:30 PDT, Hunseop Jeong
no flags
Patch (3.57 KB, patch)
2015-08-04 06:33 PDT, Hunseop Jeong
no flags
Brent Fulgham
Comment 1 2015-07-24 09:16:24 PDT
This was probably due to my change here: @@ -474,9 +476,5 @@ JSContextRef context = WKBundleFrameGetJavaScriptContext(mainFrame); #if ENABLE(CONTEXT_MENUS) - // Do mouse context click. - mouseDown(2, 0); - mouseUp(2, 0); - - WKRetainPtr<WKArrayRef> menuEntries = adoptWK(WKBundlePageCopyContextMenuItems(page)); + WKRetainPtr<WKArrayRef> menuEntries = adoptWK(WKBundlePageCopyContextMenuAtPointInWindow(page, m_position)); JSValueRef arrayResult = JSObjectMakeArray(context, 0, 0, 0); JSObjectRef arrayObj = JSValueToObject(context, arrayResult, 0); On Mac, the context menu is modal, so no further WebKit activity happens until the dialog is dismissed. So we can't use the mouseDown/mouseUp combination here -- it just blocks the test from running. Maybe you could just #if/def my change so thet it works like it used to on EFL and uses my revised code for Mac/Windows, and perhaps Gtk.
Hunseop Jeong
Comment 2 2015-08-04 06:01:51 PDT
Hunseop Jeong
Comment 3 2015-08-04 06:05:51 PDT
Could I restore the codes?
Hunseop Jeong
Comment 4 2015-08-04 06:30:48 PDT
Hunseop Jeong
Comment 5 2015-08-04 06:33:33 PDT
Brent Fulgham
Comment 6 2015-08-04 09:11:29 PDT
Comment on attachment 258175 [details] Patch Looks fine to me.
WebKit Commit Bot
Comment 7 2015-08-04 20:33:31 PDT
Comment on attachment 258175 [details] Patch Clearing flags on attachment: 258175 Committed r187934: <http://trac.webkit.org/changeset/187934>
WebKit Commit Bot
Comment 8 2015-08-04 20:33:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.