[EFL] Editing tests have been broken since r186694 https://bugs.webkit.org/show_bug.cgi?id=146888

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-08-04
Reviewed by Brent Fulgham.

Tools:

Restored some codes for the context click on GTK+ and EFL port.

* WebKitTestRunner/InjectedBundle/EventSendingController.cpp:
(WTR::EventSendingController::contextClick): Seperated the codes using the PLATFORM guard.

LayoutTests:

Unskip the failure tests related with r186694.

* platform/efl/TestExpectations:

Canonical link: https://commits.webkit.org/165742@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187934 268f45cc-cd09-0410-ab3c-d52691b4dbfc